# orbitizer

./: .gitignore  BLOG.md  CLAUDE.md  Cargo.toml  ENGINEERING_SHOWCASE.md  Handoff20251230.md  MITIGATION_PLAN.md  README.md  gap_UX.md  handoffXmasOrbitMole.md  misc.md  plan_integration.md
.github/workflows/: ci.yml
Mole/: README.md
Mole/cmd/analyze/: analyze_test.go  constants.go  duplicates.go  export.go  main.go  orbit_ingest.go  projects.go  projects_test.go  search.go  session.go  sidebar.go  ui_features_test.go  undo.go  view.go
docs/: integration_schemas.md
src/: cli.rs  feature.rs  lib.rs  main.rs  system.rs
src/export/: all.rs  md.rs  mod.rs
src/index/: focus.rs  mod.rs  session.rs  status.rs  store.rs  whitelist.rs
src/model/: project.rs
src/scan/: artifacts.rs  census.rs  discover.rs  fingerprint.rs  mod.rs  progress.rs
src/snapshot/: quick.rs
src/tui/: mod.rs  state.rs  ui.rs
tests/: cli_smoke.rs  dry_run.rs  feature_flags.rs  progress.rs  serde.rs
