[package]
name = "orbit"
version = "0.5.0"
edition = "2021"
description = "Orbit — UX-first workspace awareness + safe exploration (project-local)"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
walkdir = "2.5"
globset = "0.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.5"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.15"
